# cartographer_android

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt~  README.md  README.md~  README.rst  local.properties
app/: CMakeLists.txt~  build.gradle~
app/src/main/: AndroidManifest.xml
cartographer/common/: ceres_solver_options.cc  fixed_ratio_sampler.cc  histogram.cc  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  rate_timer.h  thread_pool.cc
cartographer/ground_truth/: autogenerate_ground_truth_main.cc  compute_relations_metrics_main.cc  relations_text_file.cc
cartographer/io/: color.cc  fixed_ratio_sampling_points_processor.cc  hybrid_grid_points_processor.cc  image.h  outlier_removing_points_processor.cc  pcd_writing_points_processor.cc  ply_writing_points_processor.cc  points_processor_pipeline_builder.cc  probability_grid_points_processor.cc  xray_points_processor.cc  xyz_writing_points_processor.cc
cartographer/mapping/: detect_floors.cc  imu_tracker.cc  map_builder.cc  odometry_state_tracker.cc  pose_graph_trimmer.cc  probability_values.cc  probability_values.h  sparse_pose_graph.cc  submaps.h  trajectory_connectivity.cc
cartographer/mapping_2d/: local_trajectory_builder.cc  local_trajectory_builder_options.cc  map_limits.h  probability_grid.h  range_data_inserter.cc  ray_casting.cc  sparse_pose_graph.cc  submaps.cc  xy_index.h
cartographer/mapping_2d/scan_matching/: ceres_scan_matcher.cc  correlative_scan_matcher.cc  fast_correlative_scan_matcher.cc  fast_global_localizer.cc  real_time_correlative_scan_matcher.cc
cartographer/mapping_2d/sparse_pose_graph/: constraint_builder.cc  optimization_problem.cc
cartographer/mapping_3d/: hybrid_grid.h  imu_integration.h  local_trajectory_builder.cc  local_trajectory_builder_options.cc  range_data_inserter.cc  sparse_pose_graph.cc  submaps.cc
cartographer/mapping_3d/scan_matching/: ceres_scan_matcher.cc  fast_correlative_scan_matcher.cc  precomputation_grid.cc  real_time_correlative_scan_matcher.cc  rotational_scan_matcher.cc
cartographer/mapping_3d/sparse_pose_graph/: constraint_builder.cc  optimization_problem.cc
cartographer/sensor/: compressed_point_cloud.cc  ordered_multi_queue.cc
cartographer/transform/: rigid_transform.cc  rigid_transform.h  rigid_transform.h~  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk
script/: clean-check.sh  clean-glog.sh  clean-log.sh  filterlog.py  getbagdata.py
src/: cartographer
src/cartographer/: to_string.h
src/cartographer/common/: blocking_queue.h  configuration_file_resolver.cc  histogram.cc  lua_parameter_dictionary.cc  port.h  time.cc
src/cartographer/io/: fixed_ratio_sampling_points_processor.cc  probability_grid_points_processor.cc  xray_points_processor.cc
src/cartographer/mapping/: collated_trajectory_builder.cc  map_builder.cc  map_builder.h  submaps.h  trajectory_builder.h
src/cartographer/mapping_2d/: global_trajectory_builder.cc  local_trajectory_builder.cc  sparse_pose_graph.cc  submaps.cc  submaps.h  submaps_test.cc
src/cartographer/mapping_2d/scan_matching/: ceres_scan_matcher.cc  fast_correlative_scan_matcher_test.cc  real_time_correlative_scan_matcher.cc
src/cartographer/mapping_2d/sparse_pose_graph/: optimization_problem.cc
src/cartographer/mapping_3d/: motion_filter.cc  sparse_pose_graph.cc  submaps.cc  submaps.h
src/cartographer/mapping_3d/scan_matching/: ceres_scan_matcher.cc  fast_correlative_scan_matcher_test.cc
src/cartographer/mapping_3d/sparse_pose_graph/: optimization_problem.cc
src/cartographer/sensor/: collator.cc  ordered_multi_queue.cc
src/cartographer/transform/: rigid_transform.cc
src/cartographer_generic/: buddy_lidar_2d.lua.cc  buddy_lidar_2d.lua.h  map_builder_bridge.cc  map_builder_bridge.h  msg_conversion.cc  msg_conversion.h  node.cc  node.h  node_constants.cc  node_constants.h  node_main.cc  node_options.cc  node_options.h  sensor_bridge.cc  sensor_bridge.h  test.cc  test.h  test_heritage.cc  test_heritage.h  tf_bridge.cc  tf_bridge.h  trajectory_options.cc  trajectory_options.h
src/cartographer_generic_msgs/: CameraInfo.h  ChannelFloat32.h  Header.h  LaserScan.h  Marker.h  MarkerArray.h  Odometry.h  Point.h  Point32.h  PointCloud.h  PointCloud2.h  PointCloud2Iterator.h  PointCloudIterator.h  PointField.h  Pose.h  PoseWithCovariance.h  Quaternion.h  RegionOfInterest.h  SensorTopics.h  SubmapEntry.h  SubmapList.h  SubmapQuery.h  SubmapQueryRequest.h  SubmapQueryResponse.h  Twist.h  TwistWithCovariance.h  Vector3.h
src/cartographer_generic_msgs/impl/: PointCloud2Iterator.h  PointCloudIterator.h
src/cartographer_lua/: buddy_lidar_2d.lua  sparse_pose_graph.lua  trajectory_builder.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua
